[gd_scene load_steps=2 format=3 uid="uid://cc4bnsk3bdawh"]

[ext_resource type="Script" path="res://lan.gd" id="1_jst06"]

[node name="LAN" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -352.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jst06")

[node name="ListaJogadores" type="ItemList" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 71.0
offset_top = -237.0
offset_right = 252.0
offset_bottom = 83.0
grow_vertical = 2

[node name="Criar" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 71.0
offset_top = -169.0
offset_right = 252.0
offset_bottom = -95.0
grow_vertical = 0
text = "Criar Servidor"

[node name="Conectar" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 282.0
offset_top = -169.0
offset_right = 463.0
offset_bottom = -95.0
grow_vertical = 0
text = "Conectar ao Servidor"

[node name="Começar" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 496.0
offset_top = -169.0
offset_right = 677.0
offset_bottom = -95.0
grow_vertical = 0
text = "Começar Jogo"

[node name="IPEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 429.0
offset_top = 63.0
offset_right = 681.0
offset_bottom = 139.0
text = "127.0.0.1"
placeholder_text = "127.0.0.1"

[node name="NomeEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 429.0
offset_top = 183.0
offset_right = 681.0
offset_bottom = 259.0
text = "Jogador"
placeholder_text = "Jogador"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 282.0
offset_top = 63.0
offset_right = 429.0
offset_bottom = 139.0
text = "IP:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 282.0
offset_top = 183.0
offset_right = 429.0
offset_bottom = 259.0
text = "NOME:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IPServidor" type="Label" parent="."]
layout_mode = 0
offset_left = 282.0
offset_top = 304.0
offset_right = 724.0
offset_bottom = 380.0
text = "IP do Servidor"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ErroPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.5
offset_top = -142.0
offset_right = 192.5
offset_bottom = 142.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ErroPanel"]
layout_mode = 2
offset_top = 1.0
offset_right = 385.0
offset_bottom = 193.0
text = "Ocorreu um erro! Tente novamente."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="ErroPanel"]
layout_mode = 2
offset_left = 116.5
offset_top = 220.0
offset_right = 265.5
offset_bottom = 273.0
text = "Confirmar"

[connection signal="pressed" from="Criar" to="." method="_on_criar_pressed"]
[connection signal="pressed" from="Conectar" to="." method="_on_conectar_pressed"]
[connection signal="pressed" from="Começar" to="." method="_on_começar_pressed"]
[connection signal="pressed" from="ErroPanel/Button" to="." method="_on_erropanel_button_pressed"]
